# advent-of-code-2023

./: CMakeLists.txt  LICENSE  README.md
common/: CMakeLists.txt  array.h  common.c  common.h  str.h
common/test/: CMakeLists.txt  test_str.c
day00/: day00.c
day01/: day01.c
day02/: day02.c
day03/: day03.c
day04/: day04.c
day05/: day05.c
day06/: day06.c
day07/: day07.c
day07/assets/: test01.txt
day08/: day08.c
day09/: day09.c
day10/: day10.c
day11/: day11.c
day12/: CMakeLists.txt  day12.c
day13/: day13.c
day14/: day14.c
day15/: day15.c
day16/: day16.c
day19/: day19.c
